[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psa_ml"
version = "0.0.1"
authors = [
  { name="Moses Kim", email="moses@thinkingmachin.es" },
]
description = "Package for BL rec and ontime"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["bl_rec.src", "bl_rec.scripts", "ontime.src", "ontime.scripts"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
bl_get_preds = "bl_rec.scripts.main:main"
ontime_evaluate = "ontime.scripts.evaluate:main"

[project.urls]
"Homepage" = "https://github.com/mosesckim/psa_ml"
"Bug Tracker" = "https://github.com/mosesckim/psa_ml/issues"
